// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<li
  className="mv2 tc ttu tracked"
>
  <a
    className="f5 fw4 pointer no-underline br3 ba bw1 pv2 mb2 grow tc dib b--green br--left ph3 w-75"
  />
  <a
    className="f5 fw4 pointer no-underline br3 ba bw1 pv2 mb2 grow tc dib b--green br--right ml1 w-20"
    href="/qr?code="
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    QR
  </a>
</li>
`;

exports[`component - layout should render with props 1`] = `
<li
  className="mv2 tc ttu tracked"
>
  <a
    className="f5 fw4 pointer no-underline br3 ba bw1 pv2 mb2 grow tc dib b--green br--left ph3 w-75"
    href="https://www.uglytarantula.com"
  >
    Ugly Tarantula
  </a>
  <a
    className="f5 fw4 pointer no-underline br3 ba bw1 pv2 mb2 grow tc dib b--green br--right ml1 w-20"
    href="/qr?code=ugly Tarantula"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    QR
  </a>
</li>
`;
